tests/errors/invalid-tuplet-option.typ
#import "../../src/lib.typ": score

#score(
  time: "2/4",
  bars: (
    (notes: "tuplet 3:2[bracket=sideways] { c5:e d e }"),
  ),
)
